# mini-llm

./: .gitignore  .pre-commit-config.yaml  CHECKPOINT_LOADING.md  CLAUDE.md  GRADIENT_VANISHING_ANALYSIS.md  IMPROVEMENTS.md  Makefile  OPTIMIZATION_SUMMARY.md  OPTIMIZER_SCHEDULER_RESEARCH_2024.md  PROJECT_STRUCTURE.md  QUICKSTART_A6000.md  README.md  README_MAC_OPTIMIZED.md  README_en.md  TENSORBOARD_OPTIMIZATION.md  TENSORBOARD_QUICKSTART.md  TRAINING_SPEED_OPTIMIZATION.md  analyze_cleaned_data.py  demo_optimization_suite.py  eval_model.py  eval_vlm.py  main.py  pyproject.toml  pyrightconfig.json  quick_start_uv.py  requirements.txt  setup_uv.sh  simple_demo_results.json  structure_validation_results.json  test_lightweight_monitor.py  test_swiglu_model.py  test_training.py
.github/workflows/: ci.yml
config/: mac_optimized_config.py  rtx3090_config.py  rtx4090_config.py  scaling_plan.py  training_config.py
configs/dashboard/: dpo.json  pipeline.json  pretrain.json  sft.json
configs/data/: dpo_manifest.json  mix_plan.template.json  pretrain_manifest.json  rlhf_manifest.json  sft_manifest.json
data/: alex_identity.jsonl  dataset  dpo.jsonl  minigpt_identity.jsonl  pretrain_hq.jsonl  sft_mini_512.jsonl  ultra_think.jsonl
data/chinese/: identity_conversations.jsonl
data/eval/: regression_prompts.jsonl
dataset/: dataset.md  identity_cn_sample.jsonl  lm_dataset.py  preference_cn_sample.jsonl  vlm_dataset.py
docs/: 2024_LLM_OPTIMIZATION_DEEP_DIVE.md  A6000_OPTIMIZATION_GUIDE.md  CHECKPOINT_DATASET_GUIDE.md  CLAUDE.md  DEVELOPMENT_ROADMAP.md  ISTJ_LEARNING_GUIDE.md  MODEL_EVALUATION_GUIDE.md  MiniGPT训练全流程深度解析手册.md  OPTIMIZATION_SUMMARY.md  README.md  TENSORBOARD_GUIDE.md  TRAINING_SUMMARY.md  ULTRA_THINK_DOCUMENTATION_ENHANCEMENT_SUMMARY.md  booklet_cn.md  code_model_training_research.md  data.md  data_analysis.md  data_processing_pipeline.md  dataset_preparation.md  foundation_analysis.md  getting_started.md  inference.md  minimind_comparison.md  model.md  nanochat_research.md  rlhf.md  run_script_options.md  state_of_the_art_research.md  training.md  training_remaining_work.md  后训练验证指标与工具.md  大模型后训练学习路径与验证指南.md  实践项目与验证方案.md  第一章-Transformer架构深度解析.md  第二章-预训练理论与实践.md
docs/MiniGPT训练深度解析小册/: README.md
docs/case_studies/: qwen_identity_finetune.md
docs/changelog/: CHANGELOG.md  README.md
docs/guides/: README.md  data.md  dataset_preparation.md  getting_started.md  inference.md  model.md  performance_optimizations.md  rlhf.md  training.md
docs/planning/: training_optimization_plan.md  training_remaining_work.md
docs/research/: code_model_training_research.md  data_analysis.md  foundation_analysis.md  minimind_comparison.md  minimind_param_validation.md
examples/: __init__.py
examples/qwen_identity_finetune/: __init__.py  pipeline.py
mlx_train/: README.md  __init__.py  bench.py  config.py  data.py  demo.py  distill_data_ollama.py  download.py  eval.py  flops.py  infer.py  model.py  optim.py  params.py  pretokenize.py  requirements.txt  speed.py  stats.py  trace.py  train.py
model/: model_minillm.py  model_vlm.py
rustbpe/src/: lib.rs
scripts/: README.md  README_CHECKPOINT_MPS.md  README_ENHANCED.md  bench_mlx.sh  build_chinese_mix.py  chat_openai_api.py  check_optimization.sh  clean_datasets.py  continue_training.py  convert_model.py  convert_to_jsonl.py  create_high_quality_dataset.py  create_smoke_subset.py  debug_fullstack.py  dedupe_simhash.py  diagnose_gradients.py  download_code_corpus.py  eval_questions.py  evaluate_stage.py  export_embeddings.py  flops_mlx.sh  generate.py  monitor_training.py  optimize_memory.py  performance_test.py  plot_training_curves.py  prepare_training_data.py  progressive_train.py  quick_eval.py  resume.sh  run.sh  run_benchmark_eval.py  run_cn_pipeline.sh  run_mlx.sh  run_mlx_distill_ollama.sh  run_mlx_rl_gsm8k.sh  run_qwen_identity_finetune.py  run_smoke_pipeline.py  run_vlm_pipeline.py  serve_openai_api.py  (+16 more)
src/: __init__.py
tests/: README.md  inspect_model.py  test_correct_small.py  test_dropout_configurations.py  test_language_modeling_dataset.py  test_medium_model.py  test_vlm_smoke.py
tokenizer/: __init__.py  rustbpe_tokenizer.py
trainer/: checkpoint_loader.py  train_distill_reason.py  train_distillation.py  train_dpo.py  train_full_sft.py  train_grpo.py  train_lora.py  train_ppo.py  train_pretrain.py  train_spo.py  train_vlm_sft.py  trainer_utils.py
utils/: README.md  __init__.py  calculate_model_comparison.py  conversation.py  demo_optimization_suite.py  quick_start.py  quick_start_uv.py  simple_optimization_demo.py
(+167 files in other folders)
