[project]
name = "minigpt-training"
version = "0.1.0"
description = "MiniGPT训练框架 - RTX 3090优化版本"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # PyTorch 核心依赖
    "torch==2.4.0",
    "torchvision==0.19.0",
    "torchaudio==2.4.0",
    # 核心依赖
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    # 训练优化库
    "transformers>=4.44.0",
    "datasets>=2.20.0",
    "tokenizers>=0.19.0",
    # 性能监控
    "wandb>=0.17.0",
    "tensorboard>=2.17.0",
    # 数据处理
    "jsonlines>=4.0.0",
    "pandas>=2.2.0",
    # 混合精度训练和优化
    "accelerate>=0.33.0",
    # CUDA 工具
    "ninja>=1.11.0",
]

